# ThreatAgent

./: .gitignore  GITHUB_REPOSITORY_READY.md  GITHUB_SETUP_INSTRUCTIONS.md  HOW_TO_USE.md  IMPLEMENTATION_SUMMARY_REAL_DATA.md  LEVEL_1_INGESTION_GUIDE.md  QUICK_REFERENCE.md  README.md  REAL_DATA_CONFIGURATION_GUIDE.md  SCRIPT_COVERAGE_ANALYSIS.md  SYSTEM_COMPLETION_SUMMARY.md  USER_GUIDE.md  refresh_threatagent_data.sh  requirements.txt  test_threatcrew_all.py
threatcrew/: .removed_files.txt  COMPLETION_REPORT.md  DOCUMENTATION_UPDATE_SUMMARY.md  ENHANCED_SYSTEM_IMPLEMENTATION.md  LICENSE  MEMORY_FINETUNING_GUIDE.md  README.md  STATUS_REPORT.md  TARGETING_SYSTEM_GUIDE.md  configure_data_sources.py  pyproject.toml  run_tests.sh  run_threatcrew.sh  test_real_data_mode.py
threatcrew/knowledge/: README.md  ThreatAgent.Modelfile  setup_custom_model.sh
threatcrew/src/config/: campaigns.yaml  industry_profiles.yaml
threatcrew/src/threatcrew/: crew.py  main.py
threatcrew/src/threatcrew/config/: README.md  data_source_config.py  threat_targeting.py
threatcrew/src/threatcrew/managers/: __init__.py  continuous_learning_manager.py  crewai_training_manager.py  threat_feed_manager.py
threatcrew/src/threatcrew/tools/: README.md  finetuning_system.py  llm_classifier.py  memory_system.py  osint_scraper.py  report_writer.py  rule_generator.py  ttp_mapper.py
threatcrew/tests/: README.md  crewagents_validation.py  demo_complete_system.py  demo_targeting_system.py  ge_vernova_end_to_end_demo.py  setup_memory_finetuning.py  simple_memory_test.py  simple_run.py  verify_system.py
(+6 files in other folders)
