[project]
name = "threatcrew"
version = "0.1.0"
description = "threatcrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
threatcrew = "threatcrew.main:run"
run_crew = "threatcrew.main:run"
train = "threatcrew.main:train"
replay = "threatcrew.main:replay"
test = "threatcrew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
